Fission: http://twitter.com/ does not redirect to https if you are not logged in
Categories
(Core :: Networking, defect, P1)
Tracking
()
People
(Reporter: jan, Assigned: valentin)
References
(Blocks 1 open bug)
Details
(Keywords: nightly-community, Whiteboard: [necko-triaged])
Attachments
(2 files)
Debian Testing, KDE, X11
STR:
Launch
- mozregression --launch 2019-06-24 --pref fission.autostart:true -a http://twitter.com/login
- mozregression --launch 2019-06-24 --pref fission.autostart:true dom.serviceWorkers.enabled:false -a http://twitter.com/login
Actual: http://twitter.com/login is open.
Expected: We should be redirected to https://twitter.com/login.
Updated•2 years ago
|
Assignee | ||
Comment 2•2 years ago
|
||
So, I looked into it, and the https redirect actually happens and delivers the data to the correct process, but for some reason we end up with the wrong URL in the URL bar.
I've figured out that if we don't set the originalURI on the redirected channel, this problem no longer happens, but it seems odd to set it, since it was a redirected channel. Maybe we should treat it as a completely new channel?
In any case, I'm not yet sure if the bug is in Necko code or in the docshell.
Nika, do you know if the docshell does something with the originalURI from the document http channel that might cause this bug?
Assignee | ||
Comment 3•2 years ago
|
||
Thanks to Honza we figured out that the resultPrincipalURI is not properly set on the loadInfo.
I'll land a patch ASAP.
Assignee | ||
Comment 4•2 years ago
|
||
Pushed by valentin.gosu@gmail.com: https://hg.mozilla.org/integration/autoland/rev/0d7b68ec3e0a The resultPrincipalURI needs to be set on the loadInfo used for the redirect r=mayhemer
Comment 11•2 years ago
|
||
bugherder |
Updated•1 year ago
|
Comment 12•1 year ago
|
||
Hello!
Reproduced using STR from comment 0 with Firefox 69.0a1 (20190624213657) on Windows 10x64. The http://twitter.com/login is opened.
The issue is verified fixed using Firefox 73.0a1 (20191211214629) on Windows 10x64, macOS 10.15 and Ubuntu 18.04. https://twitter.com/login is successfully opened.
Description
•