Bug 1561089 - The resultPrincipalURI needs to be set on the loadInfo used for the redirect r=mayhemer

Differential Revision: https://phabricator.services.mozilla.com/D36301

--HG--
extra : moz-landing-system : lando